--- a/src/scss/modals/_index.scss
+++ b/src/scss/modals/_index.scss
@@ -1,4 +1,5 @@
 @forward 'base-modal';
 @forward 'win-modal';
 @forward 'settings-modal';
-@forward 'stats-modal'; 
+@forward 'stats-modal';
+@forward 'lost-game-modal'; 
